# lakehouse-ingestion-framework

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  api-result.html  compatibility.html  concepts.html  contract-access.html  contract-annotations.html  contract-ingestion.html  contract-operations.html  contracts.html  examples.html  extending.html  full-contract.html  governance.html  idempotency.html  index.html  merge-strategies.html  operations.html  pyproject.toml  quality.html  quickstart.html  reference.html  schema-policy.html  transformations.html  troubleshooting.html  watermarks.html  write-modes.html
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
connectors/: autoloader.html  azure-blob.html  external-spark.html  files.html  http-file.html  index.html  jdbc.html  object-storage.html  rest-api.html  s3.html  table-sql.html
css/: style.css
docs/: README.md  anti-patterns.md  antipadroes.md  architecture.md  arquitetura.md  compatibilidade_conectores.md  connector-compatibility.md  guia_de_uso.md  intervencoes_lib_1_8_0.md  oficial.md  operacao.md  operations.md  performance.md  quickstart.md  rds_iam_jdbc.md  reference.md  release-1.8.0-interventions.md  security.md  seguranca.md  template_projeto.md  templates.md  usage-guide.md
docs/adrs/: ADR-001-contratos-separados-por-responsabilidade.md  ADR-002-access-deferred.md  ADR-003-snapshot-soft-delete-sql-merge.md  README.md
docs/dashboards/: README.md  control_tables_dashboard.sql  control_tables_dashboard_blueprint.yaml
examples/playground/: README.md
examples/playground/contracts/bronze/: b_nasa_eonet_events.annotations.yaml  b_nasa_eonet_events.ingestion.yaml  b_nasa_eonet_events.operations.yaml  b_orders_api.annotations.yaml  b_orders_api.ingestion.yaml  b_orders_api.operations.yaml  b_orders_files.annotations.yaml  b_orders_files.ingestion.yaml  b_orders_files.operations.yaml
examples/playground/contracts/gold/: g_daily_orders.access.yaml  g_daily_orders.annotations.yaml  g_daily_orders.ingestion.yaml  g_daily_orders.operations.yaml
examples/playground/contracts/silver/: s_customers_history.annotations.yaml  s_customers_history.ingestion.yaml  s_customers_history.operations.yaml  s_devices.annotations.yaml  s_devices.ingestion.yaml  s_devices.operations.yaml  s_nasa_eonet_event_observations.annotations.yaml  s_nasa_eonet_event_observations.ingestion.yaml  s_orders.access.yaml  s_orders.annotations.yaml  s_orders.ingestion.yaml  s_orders.operations.yaml
examples/playground/notebooks/: run_contract.py
examples/playground/scripts/: validate_playground.py
examples/project_template/: README.md  databricks.yml
examples/project_template/contracts/bronze/: b_orders.ingestion.yaml
examples/project_template/contracts/silver/: c_orders.access.yaml  c_orders.annotations.yaml  c_orders.ingestion.yaml  c_orders.operations.yaml
examples/project_template/notebooks/: run_contract.py
js/: main.js
pt/: index.html
scripts/: check_release.py  check_release_tag.py
site/: index.html
src/contractforge/: __init__.py  _spark.py  _uc_capabilities.py  bundles.py  cli.py  config.py  contract_bundle.py  contract_schema.py  cost.py  exceptions.py  execution.py  governance.py  ingestion.py  lineage.py  plan.py  presets.py  schema.py  shape.py  sources.py  state.py  streaming.py  templates.py  writers.py
src/lakehouse_ingestion/: __init__.py  _spark.py  _sql.py  cli.py  config.py  contract_bundle.py  contract_schema.py  governance.py  hooks.py  ingestion.py  lineage.py  maintenance.py  plan.py  quality.py  schema.py  shape.py  sources.py  state.py  streaming.py  templates.py  watermark.py  writers.py
tests/: conftest.py  test_cli_schema_registry.py  test_cost.py  test_examples_playground.py  test_exceptions.py  test_governance.py  test_maintenance.py  test_modes.py  test_observability.py  test_package_metadata.py  test_plan.py  test_quality.py  test_schema.py  test_source_connectors.py  test_sources_streaming.py  test_state.py  test_templates.py  test_watermark.py
