[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-ingestion-framework"
version = "1.8.0"
description = "Framework de ingestão Delta Lake para Databricks com contratos declarativos, quality gates, SCD, explain mode e eventos OpenLineage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Data Platform Team"}]
keywords = ["databricks", "delta-lake", "pyspark", "lakehouse", "openlineage", "ingestion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyspark>=3.4,<4",
    "delta-spark>=3.0,<4",
    "PyYAML>=6.0",
]

[project.scripts]
lakehouse-ingest = "lakehouse_ingestion.cli:main"

[project.urls]
Homepage = "https://github.com/marquesantero/lakehouse-ingestion-framework"
Changelog = "https://github.com/marquesantero/lakehouse-ingestion-framework/blob/main/CHANGELOG.md"
Issues = "https://github.com/marquesantero/lakehouse-ingestion-framework/issues"

[project.optional-dependencies]
databricks = ["databricks-sdk>=0.20"]
dev = ["build>=1.0", "twine>=4.0", "pytest>=7.0", "ruff>=0.4", "tomli>=2.0; python_version<'3.11'"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:pyspark.*",
]
