[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contractforge"
version = "2.6.7"
description = "Contract-first framework for governed lakehouse ingestion on Delta Lake and Databricks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Data Platform Team"}]
keywords = ["databricks", "delta-lake", "pyspark", "lakehouse", "openlineage", "ingestion", "data-contracts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
contractforge = "contractforge.cli:main"

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge"
Documentation = "https://marquesantero.github.io/contractforge/"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/CHANGELOG.md"
Issues = "https://github.com/marquesantero/contractforge/issues"

[project.optional-dependencies]
databricks = ["databricks-sdk>=0.20"]
spark = ["pyspark>=3.4,<4", "delta-spark>=3.0,<4"]
aws = ["botocore>=1.34"]
dev = [
    "build>=1.0",
    "twine>=4.0",
    "pytest>=7.0",
    "ruff>=0.4",
    "tomli>=2.0; python_version<'3.11'",
    "pyspark>=3.4,<4",
    "delta-spark>=3.0,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:pyspark.*",
]
